Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21741

Qt Creator crashes when renaming a file from "File System" view

XMLWordPrintable

    • Linux/X11
    • 8eac37ae76a0f165be2df2dd2ba261df1c69db8d (qt-creator/qt-creator/4.8)

      1. Open a generic project.
      2. Open a source file from the project.
      3. Rename this source file using the File System view.
        Creator crashes:
        1  ProjectExplorer::FolderNode::forEachGenericNode(std::function<void (ProjectExplorer::Node *)> const&) const projectnodes.cpp              512  0x7fffe23ab515 
        2  ProjectExplorer::ProjectTree::forEachNode(std::function<void (ProjectExplorer::Node *)> const&)             projecttree.cpp               402  0x7fffe24aede4 
        3  ProjectExplorer::Internal::renamableFolderNodes                                                             foldernavigationwidget.cpp    209  0x7fffe2397602 
        4  ProjectExplorer::Internal::FolderNavigationModel::setData                                                   foldernavigationwidget.cpp    239  0x7fffe2397c86 
        5  QSortFilterProxyModel::setData                                                                              qsortfilterproxymodel.cpp     2244 0x7ffff63e05d0 
        6  QStyledItemDelegate::setModelData                                                                           qstyleditemdelegate.cpp       486  0x7ffff7381998 
        7  QAbstractItemView::commitData                                                                               qabstractitemview.cpp         2898 0x7ffff735b52e 
        8  QAbstractItemView::qt_static_metacall                                                                       moc_qabstractitemview.cpp     426  0x7ffff735d27d 
        9  QMetaObject::activate                                                                                       qobject.cpp                   3778 0x7ffff64422cf 
        10 QMetaObject::activate                                                                                       qobject.cpp                   3631 0x7ffff6442607 
        11 QAbstractItemDelegate::commitData                                                                           moc_qabstractitemdelegate.cpp 204  0x7ffff7378c8e 
        12 QAbstractItemDelegatePrivate::_q_commitDataAndCloseEditor                                                   qabstractitemdelegate.cpp     628  0x7ffff7379cbd 
        13 QAbstractItemDelegate::qt_static_metacall                                                                   moc_qabstractitemdelegate.cpp 99   0x7ffff7379d67 
        14 QMetaCallEvent::placeMetaCall                                                                               qobject.cpp                   509  0x7ffff643e27e 
        15 QObject::event                                                                                              qobject.cpp                   1249 0x7ffff6442a98 
        16 QApplicationPrivate::notify_helper                                                                          qapplication.cpp              3752 0x7ffff70c74e8 
        17 QApplication::notify                                                                                        qapplication.cpp              3109 0x7ffff70cee2e 
        18 QCoreApplication::notifyInternal2                                                                           qcoreapplication.cpp          1061 0x7ffff641035c 
        19 QCoreApplication::sendEvent                                                                                 qcoreapplication.cpp          1451 0x7ffff641059c 
        20 QCoreApplicationPrivate::sendPostedEvents                                                                   qcoreapplication.cpp          1800 0x7ffff6416b1d 
        21 QCoreApplication::sendPostedEvents                                                                          qcoreapplication.cpp          1654 0x7ffff6416f02 
        22 postEventSourceDispatch                                                                                     qeventdispatcher_glib.cpp     276  0x7ffff647076c 
        23 g_main_dispatch                                                                                             gmain.c                       3154 0x7ffff3a16197 
        24 g_main_context_dispatch                                                                                     gmain.c                       3769 0x7ffff3a16197 
        25 g_main_context_iterate                                                                                      gmain.c                       3840 0x7ffff3a163f0 
        26 g_main_context_iteration                                                                                    gmain.c                       3901 0x7ffff3a1649c 
        27 QEventDispatcherGlib::processEvents                                                                         qeventdispatcher_glib.cpp     422  0x7ffff6470079 
        28 QXcbGlibEventDispatcher::processEvents                                                                      qxcbeventdispatcher.cpp       143  0x7fffef11e458 
        29 QEventLoop::processEvents                                                                                   qeventloop.cpp                138  0x7ffff640e293 
        30 QEventLoop::exec                                                                                            qeventloop.cpp                225  0x7ffff640e70c 
        31 QCoreApplication::exec                                                                                      qcoreapplication.cpp          1364 0x7ffff6418332 
        32 QGuiApplication::exec                                                                                       qguiapplication.cpp           1779 0x7ffff6a7d2c8 
        33 QApplication::exec                                                                                          qapplication.cpp              2909 0x7ffff70c73c3 
        34 main                                                                                                        main.cpp                      625  0x411d15       
        

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            romek Roman Konieczny
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes