Fix crash when renaming file in file system view

Do not actually rename while iterating through the folders, first test,
rename later.
Fix-up of 0c9c747d92b7f263b386ea89d82887dc59a24773 which looks like it
actually tried to do that, but confused the two method calls.

Fixes: QTCREATORBUG-21741
Change-Id: I779e526e76651b61ffc75be6b4dfce1765bb758b
Reviewed-by: Robert Loehning <robert.loehning@qt.io>